error_templates/java/test_files/array_required_type_error/test.txt
template: "Java.ArrayRequiredTypeError"
---
NotArray.java:4: error: array required, but int found
        int value = number[0];
                            ^
1 error
===
template: "Java.ArrayRequiredTypeError"
---
# ArrayRequiredTypeError
This error occurs because the variable `number` is declared as an `int` rather than an array. You're attempting to access an index (`0`) on a variable that's not an array.
```
        int number = 5;
        int value = number[0];
                           ^
    }
}
```
## Steps to fix
### Convert variable to an array
Declare the variable `number` as an array of `int`.
```diff
public class NotArray {
    public static void main(String[] args) {
-         int number = 5;
+         int[] number = {5};
        int value = number[0];
    }
```
